--- a/src/app/monkey.html
+++ b/src/app/monkey.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    if u somehow reached this page dont ask
+    if u somehow reached this page dont ask and how did u even do that in the first place
 </body>
 </html>
